--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,35 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="/dist/output.css" type="text/css" rel="stylesheet">
+    <link href="dist/output.css" type="text/css" rel="stylesheet">
     <title>React App</title>
+    <script type="text/javascript" src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
+    <script>
+      const appId = 'sandbox-sq0idb-Y4vwYnIaYFzxUn85cade2g';
+      const locationId = 'LFTC36G2ATBSG';
+
+      async function initializeCard(payments) {
+        const card = await payments.card();
+        await card.attach('#card-container'); 
+        return card; 
+      }
+
+      document.addEventListener('DOMContentLoaded', async function () {
+        if (!window.Square) {
+          throw new Error('Square.js failed to load properly');
+        }
+        const payments = window.Square.payments(appId, locationId);
+        let card;
+        try {
+          card = await initializeCard(payments);
+        } catch (e) {
+          console.error('Initializing Card failed', e);
+          return;
+        }
+
+        // Step 5.2: create card payment
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
