--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <link href="dist/output.css" type="text/css" rel="stylesheet">
     <title>React App</title>
     <script type="text/javascript" src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
